@@ -1,3 +1,9 @@
+2001-03-29  Kenneth Christiansen  <kenneth@gnu.org>
+
+        * internet-config.cfg: Template for now an internet config can look
+        * ishare-launch.pl: Launcher program that reads the above config file
+          and activates the settings.
+
 2001-03-29  Hans Petter Jansson  <hpj@ximian.com>
 
 	* debug.pl.in (xst_debug_print_struct): Print all arguments.
